14.5/newNetworkPolicies/allow-hw1-eg-hw2-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw1-eg-hw2
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hworld-1
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          nsName: ns-1
      podSelector:
        matchLabels:
          app: hworld-2
    ports:
      - protocol: TCP
        port: 80
  - to:
      - ipBlock:
          cidr: 169.254.25.10/32
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
