14.5/newNetworkPolicies/allow-hw1-eg-outside-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw1-eg-outside
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hworld-1
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/32
              - 100.64.0.0/32
              - 172.16.0.0/20
              - 192.168.0.0/16
