14.5/newNetworkPolicies/allow-hw1-hw2-np-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw1
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hworld-1
  policyTypes:
    - Ingress
    - Egress
  ingress:
#  - from:
#    - namespaceSelector:
#        matchLabels:
#          purpose: hw-2
#      podSelector:
#        matchLabels:
#          app: hworld-2
  - from:
    ports:
    - port: 8081
      protocol: TCP
  egress:
#  - to:
#    - namespaceSelector:
#        matchLabels:
#          purpose: hw-2
#    - podSelector:
#        matchLabels:
#          app: hworld-2
  - to:
    ports:
    - port: 8082
      protocol: TCP
