14.5/newNetworkPolicies/allow-hw1-in-hw2-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw1-in-hw2
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hworld-1
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsName: ns-1
      podSelector:
        matchLabels:
          app: hworld-2
    ports:
      - protocol: TCP
        port: 80
