14.5/newNetworkPolicies/allow-hw2-hw1-np-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw2
  namespace: ns-2
spec:
  podSelector:
    matchLabels:
      app: hworld-2
  policyTypes:
    - Ingress
    - Egress
  ingress:
#  - from:
#    - namespaceSelector:
#        matchLabels:
#          purpose: hw-1
#      podSelector:
#        matchLabels:
#          app: hworld-1
  - from:
    ports:
    - port: 8082
      protocol: TCP
  egress:
#  - to:
#    - namespaceSelector:
#        matchLabels:
#          purpose: hw-1
#      podSelector:
#        matchLabels:
#          app: hworld-1
  - to:
    ports:
    - port: 8081
      protocol: TCP
