14.5/newNetworkPolicies/allow-hw2-in-hw1-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hw2-in-hw1
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hworld-2
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsName: ns-1
      podSelector:
        matchLabels:
          app: hworld-1
    ports:
      - protocol: TCP
        port: 80
