14.5/newNetworkPolicies/default-deny-all-ns-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ns1
  namespace: ns-1
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
  ingress: [ ]
  egress: # Allow cluster DNS-service only.
    - to:
        - ipBlock:
            cidr: 169.254.25.10/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ns2
  namespace: ns-2
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
  ingress: [ ]
  egress: # Allow cluster DNS-service only.
    - to:
        - ipBlock:
            cidr: 169.254.25.10/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
