14.5/newNetworkPolicies/default-ingress-deny-all-pods-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress-deny-all-pods
  namespace: ns-1
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress: [ ]
